# vision-language-model-benchmark

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt  quality_gates.txt
results/: scored.jsonl
results/_style/: repo.mplstyle
src/vlm/: runner.py  types.py
src/vlm/cli/: main.py
src/vlm/providers/: base.py  mock.py
src/vlm/scoring/: score.py
src/vlm/tasks/: load.py
src/vlm/viz/: charts.py
tests/: test_mock.py  test_tasks.py
