[project]
name = "vlm"
version = "0.13.0"
description = "Vision-Language Model eval harness across providers (Claude / GPT-4V / Gemini / Qwen-VL / LLaVA) on DocVQA / ChartQA / MMMU-style tasks."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Akshitha Reddy Lingampally" }]
keywords = ["vlm", "multimodal", "docvqa", "chartqa", "mmmu", "eval"]

dependencies = [
    "anthropic>=0.40",
    "openai>=1.40",
    "google-genai>=0.3",
    "transformers>=4.45,<5",
    "torch>=2.2",
    "Pillow>=10",
    "numpy>=1.26,<2",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "typer>=0.12",
    "pydantic>=2.7",
    "loguru>=0.7",
    "tabulate>=0.9",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8","pytest-cov>=5","ruff>=0.5","mypy>=1.10","types-Pillow","types-tqdm"]

[project.scripts]
vlm = "vlm.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vlm"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E","W","F","I","B","UP","SIM","RUF"]
ignore = ["E501","B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
ignore_missing_imports = true
exclude = ["build/","dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = ["slow: tests that load VLMs", "needs_provider: needs API key"]
